email templates upd

--- a/email-templates/html/ecommerce-berlin/index.html
+++ b/email-templates/html/ecommerce-berlin/index.html
@@ -693,7 +693,7 @@
                               style="font-weight: 400; padding-bottom: 10px; font-size: 16px; line-height: 24px"
                             >
                               <span>
-                                Keep up with the latest in e-commerce with our newsletter. Boost sales with Magento,
+                                Stay updated on e-commerce trends with our newsletter. Boost sales using Magento,
                                 optimize SEO, and discover the impact of AI chatbots in retail.
                                 <br />
                                 <br />
@@ -755,7 +755,7 @@
                             </h2>
                             <p class="text-base" style="padding-bottom: 35px">
                               After Stockholm E-Commerce Expo 2023, we're inspired and grateful! Thanks to all visitors
-                              to our stand who chatted with us!
+                              to our stand who chatted with us
                             </p>
                           </td>
                         </tr>
@@ -784,8 +784,8 @@
                         <tr>
                           <td>
                             <p class="text-base" style="display: none">
-                              We're feeling inspired after an incredible time at the E-Commerce Berlin Expo 2023! Thank
-                              you to all of the attendees who visited our stand and talked to our experts
+                              After Stockholm E-Commerce Expo 2023, we're inspired and grateful! Thanks to all visitors
+                              to our stand who chatted with us
                             </p>
                           </td>
                         </tr>
@@ -831,7 +831,7 @@
                 <table width="100%">
                   <tr>
                     <td class="inner">
-                      <table 2align="left" style="text-align: left">
+                      <table align="left" style="text-align: left">
                         <tr class="section-stories__img">
                           <td colspan="1" style="padding: 0; padding-top: 16px">
                             <img
@@ -859,7 +859,7 @@
                                 April 28, 2023
                               </p>
                               <a
-                                href="https://perspectiveteam.com/blog/development-of-marketplace-on-vnecoms-modules"
+                                href="https://perspectiveteam.com/blog/magento-contribution-day/"
                                 class="text-base section-stories__text"
                                 style="font-weight: 600; color: inherit; text-align: left"
                                 >Experiencing our first Magento Contribution Day
@@ -907,11 +907,11 @@
                                 May 31, 2023
                               </p>
                               <a
-                                href="https://perspectiveteam.com/blog/9-ways-how-you-can-use-chatgpt-in-ecommerce/"
+                                href="https://perspectiveteam.com/blog/headless-ecommerce-solution-for-magento-2-how-to-make-the-right-choice/"
                                 class="text-base section-stories__text"
                                 style="font-weight: 600; color: inherit"
                               >
-                                Headless eCommerce Solution for Magento 2 - How to Make the Right Choice?
+                                Headless E-Commerce Solution for Magento 2 - How to Make the Right Choice?
                               </a>
                             </div>
                           </td>
