--- a/files for admin/CMS Blocks/services/service-page-why-choose.html
+++ b/files for admin/CMS Blocks/services/service-page-why-choose.html
@@ -65,7 +65,7 @@
         </div>
       </div>
       <a href="/company">
-        <button class="_button _button--arrow" style="margin-right: auto; margin-left: auto; color: #333">
+        <button class="_button _button--arrow" style="margin-right: auto; margin-left: auto;">
           <span class="_button__text">More about us</span>
           <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px)">More about us</span>
           <span class="_button__overlay _button__overlay--hover"></span>
