ga4 page content upd

--- a/files for admin/CMS Pages/services/ga4.html
+++ b/files for admin/CMS Pages/services/ga4.html
@@ -10,17 +10,17 @@
     <div class="grid-col">
       <div class="article__intro">
         <h2 class="h4">Magento and GA4 Integration: Unleash the Power of Advanced Analytics tool</h2>
-        <p class="article__text article__text--intro">
+        <p class="_text-article _text-article--intro">
           As we approach the July 1, 2023 deadline, it is crucial that we begin the migration process to Google
           Analytics 4 (GA4). Universal Analytics will no longer be processing new data, making it imperative that we
           transition to the latest analytics system.
         </p>
-        <p class="article__text article__text--intro">
+        <p class="_text-article _text-article--intro">
           Our team is here to assist you in seamlessly integrating GA4 features into your website, specifically your
           Magento store. By transferring goals and implementing GA4 functionality, we can ensure that your website is
           fully optimized for the latest analytics system.
         </p>
-        <p class="article__text article__text--intro">
+        <p class="_text-article _text-article--intro">
           Don't miss out on the benefits that GA4 has to offer. Now is the time to experience its new features and take
           advantage of the advanced analytics capabilities it provides. Let us guide you through this process and ensure
           a smooth transition to GA4.
@@ -39,125 +39,128 @@
   </div>
   <section class="article__section _article-page-grid">
     <div class="grid-col"></div>
-    <div class="grid-col" itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-      <h2 class="h4 article__title">
-        <span style="text-transform: uppercase" itemprop="name"
-          >Why Should You Make the Switch to Google Analytics 4?</span
-        >
-      </h2>
-      <div itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
-        <p class="article__text" itemprop="text">
-          As the digital landscape evolves, businesses must stay ahead of the curve and leverage the latest technology
-          to gain valuable insights into customer behavior. Google Analytics 4 (GA4) is the latest iteration of Google
-          Analytics, offering an array of advanced features essential for Magento merchants looking to attract new
-          customers and improve conversion rates.
+    <div class="grid-col">
+      <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+        <h2 class="h4 article__title">
+          <span style="text-transform: uppercase" itemprop="name"
+            >Why Should You Make the Switch to Google Analytics 4?</span
+          >
+        </h2>
+        <div itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
+          <p class="_text-article" itemprop="text">
+            As the digital landscape evolves, businesses must stay ahead of the curve and leverage the latest technology
+            to gain valuable insights into customer behavior. Google Analytics 4 (GA4) is the latest iteration of Google
+            Analytics, offering an array of advanced features essential for Magento merchants looking to attract new
+            customers and improve conversion rates.
+          </p>
+        </div>
+        <h3 class="h4 article__title">Detailed data reporting</h3>
+
+        <p class="_text-article">
+          One of the critical benefits of GA4 is its ability to provide detailed metrics, data stream, and reports on
+          how customers interact with products and services. This valuable information can be used to optimize marketing
+          strategies, improve website navigation, and ultimately increase conversion rates.
         </p>
-      </div>
-      <h3 class="h4 article__title">Detailed data reporting</h3>
 
-      <p class="article__text">
-        One of the critical benefits of GA4 is its ability to provide detailed metrics, data stream, and reports on how
-        customers interact with products and services. This valuable information can be used to optimize marketing
-        strategies, improve website navigation, and ultimately increase conversion rates.
-      </p>
+        <h3 class="h4 article__title">Analysis enhanced tracking</h3>
 
-      <h3 class="h4 article__title">Analysis enhanced tracking</h3>
+        <p class="_text-article">
+          Additionally, GA4 offers a more holistic approach to data collection, providing a complete picture of customer
+          behavior from their initial visit to the website to the final purchase. This level of detail is crucial for
+          businesses looking to understand the customer journey and make data-driven decisions.
+        </p>
 
-      <p class="article__text">
-        Additionally, GA4 offers a more holistic approach to data collection, providing a complete picture of customer
-        behavior from their initial visit to the website to the final purchase. This level of detail is crucial for
-        businesses looking to understand the customer journey and make data-driven decisions.
-      </p>
+        <h3 class="h4 article__title">GA4 Reports: Comparing Data Across Analytics Resources</h3>
+        <p class="_text-article">
+          Upgrading to Google Analytics 4 is essential for Magento merchants looking to gain a competitive edge in the
+          digital marketplace. With its advanced features and holistic approach to data collection, GA4 provides
+          valuable insights into customer behavior that can be used to improve conversion rates and drive business
+          growth.
+        </p>
 
-      <h3 class="h4 article__title">GA4 Reports: Comparing Data Across Analytics Resources</h3>
-      <p class="article__text">
-        Upgrading to Google Analytics 4 is essential for Magento merchants looking to gain a competitive edge in the
-        digital marketplace. With its advanced features and holistic approach to data collection, GA4 provides valuable
-        insights into customer behavior that can be used to improve conversion rates and drive business growth.
-      </p>
+        <div class="article__row article-gtm__section-background">
+          <div class="article__flex-content">
+            <p class="_text-article">
+              The statistics in the GA4 reports may differ from previous analytics resources, even if the settings are
+              identical. This is due to the different approaches used in data collection and analysis. Comparing
+              absolute values of goals and conversion events across different analytics resources is not recommended.
+            </p>
+          </div>
 
-      <div class="article__row article-gtm__section-background">
-        <div class="article__flex-content">
-          <p class="article__text">
-            The statistics in the GA4 reports may differ from previous analytics resources, even if the settings are
-            identical. This is due to the different approaches used in data collection and analysis. Comparing absolute
-            values of goals and conversion events across different analytics resources is not recommended.
-          </p>
-        </div>
-
-        <div class="article__image-container">
-          <img
-            src="{{view url='Mirasvit_Blog::images/article/gtm/trafic.png'}}"
-            alt="Why should You upgrade to Google Analytics 4, illustration,seo,traffic"
-          />
-        </div>
-      </div>
-      <div class="article__row">
-        <div class="article__image-container">
-          <img
-            src="{{view url='Mirasvit_Blog::images/article/gtm/statistic.png'}}"
-            alt="Google Analytics 4 is based on events and parameters and designed to track users interactions with your product, illustration"
-          />
-        </div>
-        <div class="article__flex-content">
-          <p class="article__text article__image-text">
-            Google Analytics 4 (GA4) represents a significant shift in how businesses track and analyze user behavior on
-            their websites. Unlike Universal Google Analytics, which is based on session and page views, GA4 is focused
-            on tracking events and parameters to provide a more detailed understanding of user interactions with
-            products.
-          </p>
-
-          <p class="article__text article__image-text">
-            With GA4, businesses can gain valuable insights into customer behavior by tracking key events such as:
-          </p>
-
-          <div class="article-gtm__list-block">
-            <ul>
-              <li>Add to Cart</li>
-              <li>Remove from Cart</li>
-            </ul>
-            <ul>
-              <li>Product Impression</li>
-              <li>and many more</li>
-            </ul>
+          <div class="article__image-container">
+            <img
+              src="{{view url='Mirasvit_Blog::images/article/gtm/trafic.png'}}"
+              alt="Why should You upgrade to Google Analytics 4, illustration,seo,traffic"
+            />
           </div>
         </div>
-      </div>
+        <div class="article__row">
+          <div class="article__image-container">
+            <img
+              src="{{view url='Mirasvit_Blog::images/article/gtm/statistic.png'}}"
+              alt="Google Analytics 4 is based on events and parameters and designed to track users interactions with your product, illustration"
+            />
+          </div>
+          <div class="article__flex-content">
+            <p class="_text-article article__image-text">
+              Google Analytics 4 (GA4) represents a significant shift in how businesses track and analyze user behavior
+              on their websites. Unlike Universal Google Analytics, which is based on session and page views, GA4 is
+              focused on tracking events and parameters to provide a more detailed understanding of user interactions
+              with products.
+            </p>
 
-      <p class="article__text">
-        In summary, GA4 offers a more comprehensive approach to data collection and analysis, providing businesses with
-        the insights they need to drive growth and improve customer engagement. Whether you are a Magento merchant or a
-        business looking to improve your online presence, GA4 is the future of data analysis and an essential tool for
-        success in today's digital landscape.
-      </p>
+            <p class="_text-article article__image-text">
+              With GA4, businesses can gain valuable insights into customer behavior by tracking key events such as:
+            </p>
+
+            <div class="article-gtm__list-block">
+              <ul>
+                <li>Add to Cart</li>
+                <li>Remove from Cart</li>
+              </ul>
+              <ul>
+                <li>Product Impression</li>
+                <li>and many more</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <p class="_text-article">
+          In summary, GA4 offers a more comprehensive approach to data collection and analysis, providing businesses
+          with the insights they need to drive growth and improve customer engagement. Whether you are a Magento
+          merchant or a business looking to improve your online presence, GA4 is the future of data analysis and an
+          essential tool for success in today's digital landscape.
+        </p>
+      </div>
       <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
         <h2 class="h4 article__title">
           <span style="text-transform: uppercase" itemprop="name">How to integrate GA4 in Magento 2?</span>
         </h2>
 
         <div itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
-          <p class="article__text" itemprop="text">
+          <p class="_text-article" itemprop="text">
             The shift to GA4 can be stressful, and you may require developer assistance to add the necessary data layer.
             Installation steps are also different from those used with Universal Analytics.
           </p>
 
-          <p class="article__text" itemprop="text">
+          <p class="_text-article" itemprop="text">
             It's important to note that while GA4 supports the Enhanced Ecommerce data schema, we recommend using the
             new data model as there is no information on how long the old one will be supported.
           </p>
 
-          <div class="article__text article__text--border-left _text-article--border-left">
+          <div class="_text-article _text-article--border-left _text-article--border-left">
             <h4 class="h4 article__title-bold" itemprop="text">
               GA4 is not just a simple software upgrade. It represents a significant shift towards a new platform.
               Implementing GA4 on ecommerce websites is not as straightforward as it once was and requires a deeper
               understanding of the new system.
             </h4>
           </div>
-          <p class="article__text" itemprop="text">
+          <p class="_text-article" itemprop="text">
             To get started, you need to add a data layer - pieces of code that provide product and purchase data
             transfer directly to Google Analytics. The GTM container alone is not enough for e-commerce shops.
           </p>
-          <p class="article__text" itemprop="text">
+          <p class="_text-article" itemprop="text">
             It is crucial to have a developer's help to carry out the data layer adding and follow the proper steps to
             ensure a smooth transition to GA4. This will ensure that you can make the most of the new features and
             benefits offered by GA4.
@@ -279,14 +282,14 @@
         Upgrade to GA4 and Reap the Benefits of Migrated Goals, Conversions, and Enhanced Ecommerce Tracking
       </h4>
       <ul class="decimal-list">
-        <p class="article__text">
+        <p class="_text-article">
           As a business, it is essential to stay ahead of the curve regarding data analysis and tracking. The migration
           to Google Analytics 4 (GA4) is no exception. Our team can assist you in the transition process to ensure a
           smooth and seamless transition. With our comprehensive approach, you will be able to take advantage of the
           latest features and benefits that GA4 has to offer:
         </p>
 
-        <p class="article__text">Here's what you can expect from our GA4 migration service:</p>
+        <p class="_text-article">Here's what you can expect from our GA4 migration service:</p>
 
         <li>
           A thorough audit of your current Universal Analytics (GA3) setup, including tags, triggers, variables,
@@ -401,7 +404,7 @@
           </button>
         </div>
       </div>
-      <p class="article__text">
+      <p class="_text-article">
         Google Analytics 4 offers a data stream that allows businesses to collect data on customer interactions and
         track events in a privacy-first manner. The platform's enhanced e-commerce tracking capabilities allow for a
         deeper understanding of customer behavior and the ability to predict traffic patterns using AI. Upgrade to
@@ -436,7 +439,7 @@
           :class="{'_active' : selected == 1 }"
           @click="selected !== 1 ? selected = 1 : selected = null"
         >
-          <h5>Utilize Magento 2 and GA4 for smart insights to improve your marketing strategy</h5>
+          <p class="font-medium">Utilize Magento 2 and GA4 for smart insights to improve your marketing strategy</p>
         </div>
         <div class="article__dropdowns-block__content" x-cloak x-ref="container1" x-show="selected == 1">
           <p>
@@ -460,7 +463,7 @@
           :class="{'_active' : selected == 2 }"
           @click="selected !== 2 ? selected = 2 : selected = null"
         >
-          <p>Track your customer's journey and behavior with GA4 integration on Magento 2</p>
+          <p class="font-medium">Track your customer's journey and behavior with GA4 integration on Magento 2</p>
         </div>
         <div class="article__dropdowns-block__content" x-cloak x-ref="container2" x-show="selected == 2">
           <p>
@@ -484,7 +487,7 @@
           :class="{'_active' : selected == 3 }"
           @click="selected !== 3 ? selected = 3 : selected = null"
         >
-          <p>
+          <p class="font-medium">
             Understand user behavior more deeply through time-based event tracking with GA4 integration on Magento 2
           </p>
         </div>
@@ -512,7 +515,7 @@
           :class="{'_active' : selected == 4 }"
           @click="selected !== 4 ? selected = 4 : selected = null"
         >
-          <p>Take retargeting to the next level with GA4's advanced capabilities on Magento 2</p>
+          <p class="font-medium">Take retargeting to the next level with GA4's advanced capabilities on Magento 2</p>
         </div>
         <div class="article__dropdowns-block__content" x-cloak x-ref="container4" x-show="selected == 4">
           <p>
@@ -538,7 +541,7 @@
           :class="{'_active' : selected == 5 }"
           @click="selected !== 5 ? selected = 5 : selected = null"
         >
-          <p>Monitor and analyze user acquisition with GA4 reports on Magento 2</p>
+          <p class="font-medium">Monitor and analyze user acquisition with GA4 reports on Magento 2</p>
         </div>
         <div class="article__dropdowns-block__content" x-cloak x-ref="container5" x-show="selected == 5">
           <p>
@@ -564,7 +567,7 @@
           :class="{'_active' : selected == 6 }"
           @click="selected !== 6 ? selected = 6 : selected = null"
         >
-          <p>Seamlessly integrate GA4 with Magento 2 for enhanced e-commerce tracking</p>
+          <p class="font-medium">Seamlessly integrate GA4 with Magento 2 for enhanced e-commerce tracking</p>
         </div>
         <div class="article__dropdowns-block__content" x-cloak x-ref="container6" x-show="selected == 6">
           <p>
@@ -590,7 +593,9 @@
           :class="{'_active' : selected == 7 }"
           @click="selected !== 7 ? selected = 7 : selected = null"
         >
-          <p>Gain a deeper understanding of customer behavior and e-commerce performance with GA4 on Magento 2</p>
+          <p class="font-medium">
+            Gain a deeper understanding of customer behavior and e-commerce performance with GA4 on Magento 2
+          </p>
         </div>
         <div class="article__dropdowns-block__content" x-cloak x-ref="container7" x-show="selected == 7">
           <p>
