email template style fixes, stored old template ver.

--- a/email-templates/html/ecommerce-berlin/index.html
+++ b/email-templates/html/ecommerce-berlin/index.html
@@ -507,7 +507,7 @@
       }
       @media screen and (max-width: 599px) {
         .updates-square {
-          padding: 20px 8px 20px 18px;
+          padding: 20px 8px 20px 18px !important;
         }
       }
       @media screen and (min-width: 600px) {
@@ -549,7 +549,7 @@
       }
       @media screen and (max-width: 599px) {
         .updates-square-1 p {
-          max-width: 100px;
+          max-width: 150px;
         }
       }
       @media screen and (max-width: 599px) {
@@ -818,7 +818,11 @@
             </td>
           </tr>
           <tr>
-            <td style="padding-right: 16px; padding-left: 16px"><div style="border-top: 1px solid #949494"></div></td>
+            <td style="width: 100%">
+              <div style="padding-right: 16px; padding-left: 16px">
+                <div style="border-top: 1px solid #949494"></div>
+              </div>
+            </td>
           </tr>
           <tr>
             <td class="two-column" dir="rtl">
@@ -849,8 +853,8 @@
                             />
                           </td>
                         </tr>
-                        <tr class="section-stories__item">
-                          <td colspan="6" style="padding: 0">
+                        <tr class="section-stories__item" dir="ltr">
+                          <td colspan="6" style="padding: 0" >
                             <div>
                               <p
                                 class="text-xs"
@@ -930,8 +934,10 @@
             </td>
           </tr>
           <tr>
-            <td style="padding-right: 16px; padding-left: 16px">
-              <div style="border-bottom: 1px solid #949494"></div>
+            <td style="width: 100%">
+              <div style="padding-right: 16px; padding-left: 16px">
+                <div style="border-bottom: 1px solid #949494"></div>
+              </div>
             </td>
           </tr>
 
