small fixes for some articles ( content changes )

--- a/files for admin/CMS Blocks/footer_info_block.html
+++ b/files for admin/CMS Blocks/footer_info_block.html
@@ -6,18 +6,19 @@
     itemscope
     itemtype="https://schema.org/PostalAddress"
   >
-    <p>
+    <span style="display: block">
       <a href="tel:+1 312-239-0843" class="footer-info__phone" itemprop="telephone">+1 312-239-0843</a>
-    </p>
-    <p>
+    </span>
+    <span style="display: block">
       <a href="mailto:order@perspectiveteam.com" class="footer-info__email">
         <span itemprop="email">order@perspectiveteam.com</span>
       </a>
-    </p>
+    </span>
   </h5>
   <h5 class="h5 footer-info__title">Find us</h5>
   <h5 class="h5 footer-info__text">
-    <p
+    <span
+      style="display: block"
       class="footer-info__address"
       itemprop="location"
       itemprop="address"
@@ -26,10 +27,16 @@
     >
       <span itemprop="addressLocality">Kyiv</span>,
       <span itemprop="streetAddress">15a Tumaniana</span>
-    </p>
-    <p class="footer-info__site" itemscope itemprop="organization" itemtype="https://schema.org/Organization">
+    </span>
+    <span
+      style="display: block"
+      class="footer-info__site"
+      itemscope
+      itemprop="organization"
+      itemtype="https://schema.org/Organization"
+    >
       <span itemprop="name">perspectiveteam.com</span>
-    </p>
+    </span>
   </h5>
   <h5 class="h5 footer-info__title">Follow us</h5>
   <div class="footer-info__links">
