--- a/files for admin/CMS Pages/services/magento-security-audit.html
+++ b/files for admin/CMS Pages/services/magento-security-audit.html
@@ -180,6 +180,7 @@
                   style=""
                   x-ref="container1"
                   x-bind:style="selected == 1 ? 'max-height: ' + $refs.container1.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 1 ? $el.style['max-height'] = $refs.container1.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
@@ -211,6 +212,7 @@
                   style=""
                   x-ref="container2"
                   x-bind:style="selected == 2 ? 'max-height: ' + $refs.container2.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 2 ? $el.style['max-height'] = $refs.container2.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
@@ -243,6 +245,7 @@
                   style=""
                   x-ref="container3"
                   x-bind:style="selected == 3 ? 'max-height: ' + $refs.container3.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 3 ? $el.style['max-height'] = $refs.container3.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
@@ -274,6 +277,7 @@
                   style=""
                   x-ref="container4"
                   x-bind:style="selected == 4 ? 'max-height: ' + $refs.container4.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 4 ? $el.style['max-height'] = $refs.container4.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
@@ -305,6 +309,7 @@
                   style=""
                   x-ref="container5"
                   x-bind:style="selected == 5 ? 'max-height: ' + $refs.container5.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 5 ? $el.style['max-height'] = $refs.container5.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
@@ -335,6 +340,7 @@
                   style=""
                   x-ref="container6"
                   x-bind:style="selected == 6 ? 'max-height: ' + $refs.container6.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 6 ? $el.style['max-height'] = $refs.container6.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
@@ -365,6 +371,7 @@
                   style=""
                   x-ref="container7"
                   x-bind:style="selected == 7 ? 'max-height: ' + $refs.container7.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 7 ? $el.style['max-height'] = $refs.container7.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
@@ -395,6 +402,7 @@
                   style=""
                   x-ref="container8"
                   x-bind:style="selected == 8 ? 'max-height: ' + $refs.container8.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 8 ? $el.style['max-height'] = $refs.container8.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
@@ -425,6 +433,7 @@
                   style=""
                   x-ref="container9"
                   x-bind:style="selected == 9 ? 'max-height: ' + $refs.container9.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 9 ? $el.style['max-height'] = $refs.container9.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
@@ -455,6 +464,7 @@
                   style=""
                   x-ref="container10"
                   x-bind:style="selected == 10 ? 'max-height: ' + $refs.container10.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 10 ? $el.style['max-height'] = $refs.container10.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
