--- a/files for admin/CMS Pages/services/magento-pwa.html
+++ b/files for admin/CMS Pages/services/magento-pwa.html
@@ -170,6 +170,7 @@
                             style=""
                             x-ref="container1"
                             x-bind:style="selected == 1 ? 'max-height: ' + $refs.container1.scrollHeight + 'px' : ''"
+                            x-on:resize.window="setTimeout (function () {selected == 1 ? $el.style['max-height'] = $refs.container1.scrollHeight + 'px' : ''}, 300)"
                     >
                         <div class="_collapsible__content" style="display: block">
                             <div class="_collapsible__col">
@@ -201,6 +202,7 @@
                             style=""
                             x-ref="container2"
                             x-bind:style="selected == 2 ? 'max-height: ' + $refs.container2.scrollHeight + 'px' : ''"
+                            x-on:resize.window="setTimeout (function () {selected == 2 ? $el.style['max-height'] = $refs.container2.scrollHeight + 'px' : ''}, 300)"
                     >
                         <div class="_collapsible__content" style="display: block">
                             <div class="_collapsible__col">
@@ -233,6 +235,7 @@
                             style=""
                             x-ref="container3"
                             x-bind:style="selected == 3 ? 'max-height: ' + $refs.container3.scrollHeight + 'px' : ''"
+                            x-on:resize.window="setTimeout (function () {selected == 3 ? $el.style['max-height'] = $refs.container3.scrollHeight + 'px' : ''}, 300)"
                     >
                         <div class="_collapsible__content" style="display: block">
                             <div class="_collapsible__col">
@@ -264,6 +267,7 @@
                             style=""
                             x-ref="container4"
                             x-bind:style="selected == 4 ? 'max-height: ' + $refs.container4.scrollHeight + 'px' : ''"
+                            x-on:resize.window="setTimeout (function () {selected == 4 ? $el.style['max-height'] = $refs.container4.scrollHeight + 'px' : ''}, 300)"
                     >
                         <div class="_collapsible__content" style="display: block">
                             <div class="_collapsible__col">
@@ -294,6 +298,7 @@
                             style=""
                             x-ref="container5"
                             x-bind:style="selected == 5 ? 'max-height: ' + $refs.container5.scrollHeight + 'px' : ''"
+                            x-on:resize.window="setTimeout (function () {selected == 5 ? $el.style['max-height'] = $refs.container5.scrollHeight + 'px' : ''}, 300)"
                     >
                         <div class="_collapsible__content" style="display: block">
                             <div class="_collapsible__col">
@@ -323,6 +328,7 @@
                             style=""
                             x-ref="container6"
                             x-bind:style="selected == 6 ? 'max-height: ' + $refs.container6.scrollHeight + 'px' : ''"
+                            x-on:resize.window="setTimeout (function () {selected == 6 ? $el.style['max-height'] = $refs.container6.scrollHeight + 'px' : ''}, 300)"
                     >
                         <div class="_collapsible__content" style="display: block">
                             <div class="_collapsible__col">
@@ -352,6 +358,7 @@
                             style=""
                             x-ref="container7"
                             x-bind:style="selected == 7 ? 'max-height: ' + $refs.container7.scrollHeight + 'px' : ''"
+                            x-on:resize.window="setTimeout (function () {selected == 7 ? $el.style['max-height'] = $refs.container7.scrollHeight + 'px' : ''}, 300)"
                     >
                         <div class="_collapsible__content" style="display: block">
                             <div class="_collapsible__col">
