--- a/files for admin/CMS Pages/services/migration-to-magento-2.html
+++ b/files for admin/CMS Pages/services/migration-to-magento-2.html
@@ -171,6 +171,7 @@
                   style=""
                   x-ref="container1"
                   x-bind:style="selected == 1 ? 'max-height: ' + $refs.container1.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 1 ? $el.style['max-height'] = $refs.container1.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
@@ -202,6 +203,7 @@
                   style=""
                   x-ref="container2"
                   x-bind:style="selected == 2 ? 'max-height: ' + $refs.container2.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 2 ? $el.style['max-height'] = $refs.container2.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
@@ -234,6 +236,7 @@
                   style=""
                   x-ref="container3"
                   x-bind:style="selected == 3 ? 'max-height: ' + $refs.container3.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 3 ? $el.style['max-height'] = $refs.container3.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
@@ -265,6 +268,7 @@
                   style=""
                   x-ref="container4"
                   x-bind:style="selected == 4 ? 'max-height: ' + $refs.container4.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 4 ? $el.style['max-height'] = $refs.container4.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
@@ -296,6 +300,7 @@
                   style=""
                   x-ref="container5"
                   x-bind:style="selected == 5 ? 'max-height: ' + $refs.container5.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 5 ? $el.style['max-height'] = $refs.container5.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
@@ -326,6 +331,7 @@
                   style=""
                   x-ref="container6"
                   x-bind:style="selected == 6 ? 'max-height: ' + $refs.container6.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 6 ? $el.style['max-height'] = $refs.container6.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
@@ -356,6 +362,7 @@
                   style=""
                   x-ref="container7"
                   x-bind:style="selected == 7 ? 'max-height: ' + $refs.container7.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 7 ? $el.style['max-height'] = $refs.container7.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
@@ -386,6 +393,7 @@
                   style=""
                   x-ref="container8"
                   x-bind:style="selected == 8 ? 'max-height: ' + $refs.container8.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 8 ? $el.style['max-height'] = $refs.container8.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
@@ -397,6 +405,7 @@
           </div>
           <p></p>
         </div>
+      </div>
     </section>
 
 
