--- a/files for admin/CMS Pages/services/server-optimization.html
+++ b/files for admin/CMS Pages/services/server-optimization.html
@@ -244,6 +244,7 @@
                   style=""
                   x-ref="container1"
                   x-bind:style="selected == 1 ? 'max-height: ' + $refs.container1.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 1 ? $el.style['max-height'] = $refs.container1.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
@@ -285,6 +286,7 @@
                   style=""
                   x-ref="container2"
                   x-bind:style="selected == 2 ? 'max-height: ' + $refs.container2.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 2 ? $el.style['max-height'] = $refs.container2.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
@@ -339,6 +341,7 @@
                   style=""
                   x-ref="container3"
                   x-bind:style="selected == 3 ? 'max-height: ' + $refs.container3.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 3 ? $el.style['max-height'] = $refs.container3.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
@@ -376,6 +379,7 @@
                   style=""
                   x-ref="container4"
                   x-bind:style="selected == 4 ? 'max-height: ' + $refs.container4.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 4 ? $el.style['max-height'] = $refs.container4.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
@@ -417,6 +421,7 @@
                   style=""
                   x-ref="container5"
                   x-bind:style="selected == 5 ? 'max-height: ' + $refs.container5.scrollHeight + 'px' : ''"
+                  x-on:resize.window="setTimeout (function () {selected == 5 ? $el.style['max-height'] = $refs.container5.scrollHeight + 'px' : ''}, 300)"
           >
             <div class="_collapsible__content" style="display: block">
               <div class="_collapsible__col">
