--- a/files for admin/CMS Blocks/breeze-footer.html
+++ b/files for admin/CMS Blocks/breeze-footer.html
@@ -165,7 +165,7 @@
                         <img src="{{media url='wysiwyg/breeze/contact-image.png'}}" alt="" />
                     </div>
                     <div class="contacts-footer__content">
-                        <div class="contacts-footer__name h3">Viktor Klimovych</div>
+                        <div class="contacts-footer__name h3" style="text-transform:none">Viktor Klimovych</div>
                         <div class="contacts-footer__pos body-16">Head of Business Development</div>
                         <p class="contacts-footer__text contacts-footer__text--dt">
                             Have any questions? <br />
