--- a/files for admin/CMS Blocks/breeze-footer.html
+++ b/files for admin/CMS Blocks/breeze-footer.html
@@ -244,7 +244,6 @@ getPathName () {
                     class="get-started__form form-contact"
                     @submit="submitForm($event)"
                     novalidate="true"
-                    data-hs-cf-bound="true"
             >
                 <div class="form-contact__body" x-show="showForm">
                     <input
@@ -281,7 +280,22 @@ getPathName () {
                             x-on:input="validate($el, false)"
                     />
                     <input type="hidden" name="type" value="aGlyZV91cw==" />
-
+                    <input style="width:0px;height:0px;border:none;font-size:0px;display:flex;padding:0px;line-height:0;margin:0"
+                           name="utm_source"
+                           type="text"
+                    />
+                    <input style="width:0px;height:0px;border:none;font-size:0px;display:flex;padding:0px;line-height:0;margin:0"
+                           name="utm_medium"
+                           type="text"
+                    />
+                    <input style="width:0px;height:0px;border:none;font-size:0px;display:flex;padding:0px;line-height:0;margin:0"
+                           name="utm_campaign"
+                           type="text"
+                    />
+                    <input style="width:0px;height:0px;border:none;font-size:0px;display:flex;padding:0px;line-height:0;margin:0"
+                           name="utm_term"
+                           type="text"
+                    />
                     <div class="form-contact__attache form-contact__attache--white contact-attache">
                         <label for="attache-one_of_us"> Attach </label>
                         <input
